======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes
- `orders`: don't intercept keyboard input for setting skill or labor restrictions on workshop workers tab when the player is setting the building nickname

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 50.12-r2

## New Features
- `stocks`: add button/hotkey for removing empty categories from the stocks list
- `sort`: updated and reinstated military status/squad membership/burrow membership filter for work animal assignment screen
- `logistics`: ``autoretrain`` will automatically assign trainers to your partially-trained (but not yet domesticated) livestock. this prevents children of partially-trained parents from reverting to wild if you don't notice they were born
- `orders`: add overlay for configuring labor and skill level restrictions for workshops

## Fixes
- `autochop`: fix underestimation of log yield for cavern mushrooms
- `gui/notify`: prevent notification overlay from showing up in arena mode
- `logistics`: don't melt/trade/dump empty containers that happen to be sitting on the stockpile unless the stockpile accepts those item types
- `gui/launcher`: fix detection on Shift-Enter for running commands and autoclosing the launcher
- `logistics`: don't send autotrade items to forbidden depots
- `autoclothing`: don't produce clothes for dead units
- `caravan`: fix trade price calculations when the same item was requested for both import and export

## Misc Improvements
- `autobutcher`: prefer butchering partially trained animals and save fully domesticated animals to assist in wildlife domestication programs
- `autodump`: can now teleport items loosely stored in buildings (clutter)